fix: Refactor include field .spec.matadata.annotations.clusterPods